[package]
name = "minecraft_discord"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.10.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
simple_config_parser = "1.0.0"
regex = "1.5.5"
crossbeam-channel = "0.5.3"
lazy_static = "1.4.0"
parking_lot = "0.12.0"
